--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
     "material-design-icons": "^3.0.1",
     "material-icons": "^1.13.12",
